tests/errors/macro/parser_unexpected_lexeme/include_with_comment.c
#include "" nghjk //comment

int main()
{
	return 0;
}
